--- a/magicadapter-core/build.gradle
+++ b/magicadapter-core/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 26
@@ -30,4 +31,13 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     // databinding
     kapt "com.android.databinding:compiler:3.0.0"
+}
+
+publish {
+    userOrg = 'andrew007vip007'
+    groupId = 'com.xuyf'
+    artifactId = 'magicadpater'
+    publishVersion = '1.0.0'
+    desc = 'With the help of databinding to achieve the simplest universal adapter.'
+    website = 'https://github.com/michaelxs/Android-MagicAdapter.git'
 }
