--- a/magicadapter-core/build.gradle
+++ b/magicadapter-core/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+    api 'com.android.support:recyclerview-v7:26.1.0'
     // databinding
     kapt "com.android.databinding:compiler:3.0.0"
 }
