--- a/build.gradle
+++ b/build.gradle
@@ -30,3 +30,7 @@ task clean(type: Delete) {
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+
+tasks.withType(Javadoc) {
+    options.encoding = 'UTF-8'
+}
