--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,7 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(Javadoc) {
-    options.encoding = 'UTF-8'
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
 }
