--- a/magicadapter-core/build.gradle
+++ b/magicadapter-core/build.gradle
@@ -41,3 +41,9 @@ publish {
     desc = 'With the help of databinding to achieve the simplest universal adapter.'
     website = 'https://github.com/michaelxs/Android-MagicAdapter.git'
 }
+
+tasks.withType(Javadoc) {
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
+}
