--- a/magicadapter-core/build.gradle
+++ b/magicadapter-core/build.gradle
@@ -22,6 +22,9 @@ android {
     dataBinding {
         enabled = true
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -43,7 +46,5 @@ publish {
 }
 
 tasks.withType(Javadoc) {
-    options.addStringOption('Xdoclint:none', '-quiet')
-    options.addStringOption('encoding', 'UTF-8')
-    options.addStringOption('charSet', 'UTF-8')
+    enabled = false
 }
