--- a/magicadapter-core/build.gradle
+++ b/magicadapter-core/build.gradle
@@ -38,8 +38,8 @@ dependencies {
 
 publish {
     userOrg = 'andrew007vip007'
-    groupId = 'com.xuyf'
-    artifactId = 'magicadpater'
+    groupId = 'com.xuyefeng'
+    artifactId = 'magicadapter'
     publishVersion = '1.0.0'
     desc = 'With the help of databinding to achieve the simplest universal adapter.'
     website = 'https://github.com/michaelxs/Android-MagicAdapter.git'
