--- a/magicadapter-core/build.gradle
+++ b/magicadapter-core/build.gradle
@@ -29,7 +29,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     api 'com.android.support:recyclerview-v7:26.1.0'
     // databinding
@@ -40,7 +40,7 @@ publish {
     userOrg = 'andrew007vip007'
     groupId = 'com.xuyefeng'
     artifactId = 'magicadapter'
-    publishVersion = '1.0.1'
+    publishVersion = '1.0.2'
     desc = 'With the help of databinding to achieve the simplest universal adapter.'
     website = 'https://github.com/michaelxs/Android-MagicAdapter.git'
 }
